HW5SERVER/tests/output/t19.out
lli: tmp.ll:35:15: error: '%3' defined with type 'i32' but expected 'i8'
%t3 = zext i8 %3 to i32
              ^
